Moved to common. Added pdf Deliverables.

--- a/D0.0_template/D0.0_template.tex
+++ b/D0.0_template/D0.0_template.tex
@@ -1,7 +1,12 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage{../deliverable}
-\usepackage{xspace}
 
+% Import the deliverable package from common directory
+\usepackage{../common/deliverable}
+
+% Tell LaTeX where to find graphics files
+\graphicspath{{../common/logos/}{./figures/}{../}}
+
+\usepackage{xspace}
 \usepackage{lipsum}
 
 % Set the deliverable number (without the D prefix, it's added automatically)
