--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{deliverable}[2024/05/01 dealii-X Deliverable Format]
+\ProvidesPackage{../common/deliverable}[2024/05/01 dealii-X Deliverable Format]
 
 % Required packages
 \RequirePackage{fancyhdr}
@@ -116,7 +116,7 @@
 \fancyhead[R]{\small \textcolor{EUblue}{ page {\thepage} of \pageref{MyLastPage}}}
 
 % Set graphics path
-\graphicspath{{../logos/}{./figures/}{../}}
+\graphicspath{{../common/logos/}{./figures/}{../}}
 
 % Footer with logo
 \fancyfoot[L]{% 
