--- a/D0.0_template/D0.0_template.tex
+++ b/D0.0_template/D0.0_template.tex
@@ -10,20 +10,20 @@
 \usepackage{lipsum}
 
 % Set the deliverable number (without the D prefix, it's added automatically)
-\setdeliverableNumber{X.Y}
+\setdeliverableNumber{[Deliverable number]}
 
 % Begin document
 \begin{document}
 
 % Create the title page with the title as argument
-\maketitlepage{Deliverable Title}
+\maketitlepage{[Full deliverable title]}
 
 \newpage
 
 % Main Table using the new environment and command
 \begin{deliverableTable}
     \tableEntry{Deliverable title}{[Full deliverable title]}
-    \tableEntry{Deliverable number}{D[X.Y]}
+    \tableEntry{Deliverable number}{D[Deliverable number]}
     \tableEntry{Deliverable version}{[Version number]}
     \tableEntry{Date of delivery}{[Planned date]}
     \tableEntry{Actual date of delivery}{[Actual date]}
